--- a/_site.yml
+++ b/_site.yml
@@ -8,8 +8,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Publications"
-      href: '#publications'
     - text: "CV"
       href: files/hardwicke_cv.pdf
+    - text: "Contact"
+      href: 'mailto:tom.hardwicke@unimelb.edu.au'
 output: distill::distill_article
